# ddquery

./: .gitignore  AGENTS.md  Cargo.toml  README.md  cliff.toml
.claude/skills/impl/: SKILL.md
.claude/skills/spec/: SKILL.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/server/: Cargo.toml
crates/core/: Cargo.toml
crates/core/examples/: explain.rs
crates/core/src/: ast.rs  cursor.rs  error.rs  explain.rs  lib.rs  parser.rs
crates/core/tests/: explain.rs  parse.rs  property.rs
crates/core/tests/snapshots/: explain__explain_snapshots.snap  explain__summarize_snapshots.snap
