[workspace]
members = ["crates/*", "apps/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/tyrchen/ddquery"
homepage = "https://github.com/tyrchen/ddquery"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "macros"] }

# dev dependencies
insta = { version = "1.48", features = ["json"] }
proptest = "1.11"
rstest = "0.26"

# workspace crates
ddquery-core = { version = "0.1.0", path = "crates/core" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = "warn"
